Added button for redirect to order

--- a/YandexTaxiHelperBot.Core/YandexTaxiHelperBot.Core.csproj
+++ b/YandexTaxiHelperBot.Core/YandexTaxiHelperBot.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\YandexTaxiHelperBot.Contracts\YandexTaxiHelperBot.Contracts.csproj" />
+      <ProjectReference Include="..\YandexTaxiHelperBot.Integrations\YandexTaxiHelperBot.Integrations.csproj" />
       <ProjectReference Include="..\YandexTaxiHelperBot.Repository\YandexTaxiHelperBot.Repository.csproj" />
     </ItemGroup>
 
